# fastform

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  ai.py  api.py  config.py  fastform.py  main.py  models.py  schemas.py  services.py
docs/: api.md
scripts/: vertical_test.py
